# file-lock

./: CMakeLists.txt  Makefile  Performace_Test.md  README.md  a.out  enc  run.sh
include/: AES.h  fileHandler.h
src/: AES.cpp  fileHandler.cpp  main.cpp  trivium.cpp
test/: encryptedSample.cpp  key.txt
